# HTDemucsCoreML

./: .gitignore  .pre-commit-config.yaml  .swiftformat  Makefile  Package.resolved  Package.swift  README.md  TASK9_CODE_REFERENCE.md  TASK9_IMPLEMENTATION_SUMMARY.md  initial-research.md  pyproject.toml  requirements.txt  verify_task9.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  parity-tests.yml
Resources/GoldenOutputs/: silence.npz  sine_440hz.npz  white_noise.npz
Resources/Models/: README.md
Sources/htdemucs-cli/: main.swift
benchmarks/: __init__.py  compare.py  run_benchmark.py
docs/: architecture.md  parity-testing-guide.md  phase1-completion-report.md  phase2b-completion-report.md  phase3-completion-report.md  swift-api-guide.md  technical-decisions.md
docs/plans/: 2026-02-01-htdemucs-coreml-design.md  2026-02-01-phase1-python-foundation.md  2026-02-01-phase2-implementation-plan.md  2026-02-01-phase2-swift-integration-design.md  2026-02-02-phase3-audio-io-design.md  2026-02-02-phase3-audio-io-implementation.md  2026-02-02-phase4-quality-validation.md  2026-02-03-devops-foundation-design.md  2026-02-03-devops-implementation.md  2026-02-03-documentation-design.md
scripts/: convert_htdemucs.py  generate_swift_fixtures.py  generate_test_fixtures.py  npz_to_json.py
src/htdemucs_coreml/: coreml_converter.py  model_surgery.py  validation.py
test_fixtures/: README.md
tests/: conftest.py  test_coreml_conversion.py  test_model_surgery.py  test_validation.py
tests/HTDemucsKitTests/: AudioDecoderTests.swift  AudioEncoderTests.swift  (+17 more)
(+26 files in other folders)
