[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "htdemucs-coreml"
version = "0.1.0"
description = "HTDemucs CoreML conversion toolkit"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "demucs>=4.0.0",
    "coremltools>=8.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
